@@ -1,28 +1,34 @@
 package jpa.board.exception;
 
-import lombok.Value;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
 import org.springframework.validation.BindingResult;
-import org.springframework.validation.FieldError;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Value
+@AllArgsConstructor(access = AccessLevel.PRIVATE)
+@Getter
 public class ErrorResponse {
     private String message;
     private String code;
-    private List<FieldError> fieldErrors;
+    private List<FieldErrorDetail> fieldErrors;
 
-    public static ErrorResponse of(String message, String code) {
-        return new ErrorResponse(message, code, null);
+    public ErrorResponse(ErrorCode errorCode, List<FieldErrorDetail> fieldErrors) {
+        this.message = errorCode.getMessage();
+        this.code = errorCode.getCode();
+        this.fieldErrors = fieldErrors;
     }
 
-    public static ErrorResponse of(String message, String code, BindingResult bindingResult) {
-        List<FieldError> fieldErrors = bindingResult.getFieldErrors().stream()
-                .map(fieldError -> new FieldError(fieldError.getField()
-                        , String.valueOf(fieldError.getRejectedValue())
-                        , fieldError.getDefaultMessage()))
-                .collect(Collectors.toList());
-        return new ErrorResponse(message, code, fieldErrors);
+    public static ErrorResponse of(ErrorCode errorCode) {
+        return new ErrorResponse(errorCode, null);
+    }
+
+    public static ErrorResponse of(ErrorCode errorCode, BindingResult bindingResult) {
+        List<FieldErrorDetail> fieldErrors = bindingResult.getFieldErrors().stream()
+                .map(FieldErrorDetail::of)
+                .toList();
+        return new ErrorResponse(errorCode, fieldErrors);
     }
 }
